<resources>
    <string name="app_name">IoT</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Account</string>
    <string name="register">註冊</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登入</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions. </string>
    <!-- Strings related to register -->
    <string name="account">Account : Email</string>
    <string name="password">Password</string>
    <string name="confirmationpassword">Confirmation password</string>
    <string name="name">Name</string>
    <string name="submit">確認</string>

    <!-- Strings related to sensor -->
    <string name="realtime">即時資料</string>
    <string name="history">歷史資料</string>
    <string name="privacy">隱私政策</string>
    <string name="action_Signout">登出</string>
</resources>
